--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,10 +5,13 @@ js:
   input       :
     - src/google/maps/extended_api.js
     - src/extensions.coffee
-    - src/turf.coffee
+    - src/turf/turf.coffee
     - src/turf/filter.coffee
     - src/turf/results.coffee    
     - src/turf/point.coffee
     - src/turf/infowindow.coffee
     - src/turf/marker.coffee
     - src/turf/map.coffee
+    - src/turf/application.coffee
+    
+    
